--- a/tutorials-master/spring-boot-modules/spring-boot-react/frontend/src/SearchQuery.css
+++ b/tutorials-master/spring-boot-modules/spring-boot-react/frontend/src/SearchQuery.css
@@ -13,7 +13,13 @@
 }
 
 #gradelabel {
-    padding: 10px
+    padding-left: 10px
 }
+
+#namelabel {
+    padding-left:10px;
+}
+
+hr { margin-top: 10px; margin-bottom: 10px }
 
 .rowC{display:flex; flex-direction:row;}
