--- a/tutorials-master/spring-boot-modules/spring-boot-react/frontend/src/SearchQuery.css
+++ b/tutorials-master/spring-boot-modules/spring-boot-react/frontend/src/SearchQuery.css
@@ -1,8 +1,31 @@
 .sidebar {
     width: 15%;
-    height: 100vh;
+    height: 30vh;
     background-color: #FF0000;
+    border: 2px solid black;
+    border-radius: 20px;
+    margin-top: 1vh;
+    margin-left: 1vh;
 }
+
+.textinputs {
+    width: 80%;
+}
+
+.labels {
+    font-family: -webkit-body;
+    padding-bottom: 1vh;
+}
+
+#Selector {
+    width: 65%;
+}
+
+#submitButton {
+    margin-top: 5px;
+    width: 40%;
+}
+
 .users {
     width: 85%;
     height: 100%;
